# recovery-rust

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/skills/recovery-performance/: SKILL.md
.agents/skills/recovery-security/: SKILL.md
.agents/skills/recovery-ui-ux/: SKILL.md
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/file_types/: mod.rs
src/components/: DriveSelector.tsx  ResultsView.tsx  ScanProgress.tsx
