[package]
name = "recovery-rust"
version = "0.1.0"
description = "Aplicação de Recuperação de Dados — Motor Tauri"
authors = ["Recovery IA"]
edition = "2021"

[lib]
name = "recovery_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
infer = "0.15"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
